Refactored BookRepositoryImpl